--- a/views/firease-sign-in-link.html
+++ b/views/firease-sign-in-link.html
@@ -13,16 +13,7 @@
 
   // Your web app's Firebase configuration
   // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
-    apiKey: "AIzaSyBteJMJfZMCBf6t6aZR88aryG-60xDpvag",
-    authDomain: "soundmind-79865.firebaseapp.com",
-    databaseURL: "https://soundmind-79865-default-rtdb.firebaseio.com",
-    projectId: "soundmind-79865",
-    storageBucket: "soundmind-79865.appspot.com",
-    messagingSenderId: "573841725932",
-    appId: "1:573841725932:web:aaec963d8d1a73902e48c9",
-    measurementId: "G-ZGENQ6551D"
-  };
+  const firebaseConfig = {};
 
   // Initialize Firebase
   const app = initializeApp(firebaseConfig);
